--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,209 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  text-align: inherit;
   min-height: 100vh;
+  font-family: cursive;
+  margin: 0;
+  padding: 30px;
+  padding-left: 50px;
+  padding-right: 50px;
+}
+
+.App-main {
+  background-color: #fff;
+  min-height: 100%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: flex-start;
+  font-size: calc(10px + 1vmin);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.app-column {
+  text-align: left;
+  margin: 10px;
+  /*border: 1px solid #a9a9a959;*/
+  border-radius: 10px;
+  padding: 15px;
+  min-width: 300px;
+  max-width: 25%;
+  width: 25%;
+  min-height: 300px;
+  background-color: #a9a9a959;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.app-task {
+  text-align: center;
+  /*border: 1px solid rgba(0, 0, 0, 0.3);*/
+  border-radius: 5px;
+  padding: 6px;
+  margin-bottom: 6px;
+  background-color: #fff;
+  flex-grow: 1;
+  max-width: 100%;
+  text-align: left;
+  font-size: inherit;
+  box-shadow: 0px 1px 0px 0px rgba(0, 0, 0, 0.2);
+  position: relative;
+}
+
+.app-new-task {
+  /*border: 1px solid rgba(0, 0, 0, 0.3);*/
+  border-radius: 5px;
+  margin-bottom: 25px;
+  background-color: #fff;
+  max-width: 100%;
+  font-size: inherit;
+  box-shadow: 0px 1px 0px 0px rgba(0, 0, 0, 0.2);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: relative;
+  padding-top: 15px;
+}
+
+.app-new-task-submit {
+  background-color: darkgreen;
+  color: #fff;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 0px 0px 5px 5px;
+}
+
+.app-new-task-submit:hover {
+  background-color: rgb(0, 65, 0);
+  transition: background-color 0.3s ease-in;
+  cursor: pointer;
+}
+
+.app-task-form {
+  padding: 20px;
+}
+
+.app-task-form-deadline {
+  margin-top: 22px;
+  display: flex;
+  align-items: center;
+  color: #7a7a7a;
+  cursor: pointer;
+  margin-left: -18px;
+}
+
+.app-task-form-labels {
+  margin-top: 15px;
+  display: flex;
+  align-items: center;
+  color: #7a7a7a;
+  cursor: pointer;
+}
+
+.app-task-form-labels .css-47ddn5-MuiInputBase-root-MuiFilledInput-root {
+  background-color: #fff !important;
+}
+
+.app-task-form-labels
+  .MuiFilledInput-root.MuiInputBase-root.MuiInputBase-colorPrimary.MuiInputBase-fullWidth.MuiInputBase-formControl.MuiInputBase-sizeSmall.MuiInputBase-adornedEnd.MuiAutocomplete-inputRoot.css-18plez3-MuiInputBase-root-MuiFilledInput-root {
+  background-color: #fff !important;
+}
+
+.separator {
+  border: 1px solid lightgrey;
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+
+.app-column-title {
+  margin: 0;
+  padding: 20px;
+  color: #7a7a7a;
+  padding-left: 0;
+  cursor: pointer;
+}
+
+.app-column-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.app-column-task-counter {
+  width: 25px;
+  height: 25px;
+  border: 2px solid #80808069;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #80808069;
+}
+
+.app-column-add {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 15px;
+  background-color: #80808069;
+  border-radius: 5px;
+  font-size: 30px;
+  color: #7a7a7a;
+}
+
+.app-column-add:hover {
+  cursor: pointer;
+  background-color: #808080b3;
+  transition: background-color 0.4s ease-in;
+}
+
+.app-column-add:active {
+  background-color: #80808029;
+}
+
+.app-column-tasks {
+  border-radius: 10px;
+}
+
+.app-task-labels {
+  display: flex;
+  justify-content: space-between;
+}
+
+.app-task-label {
+  margin-right: 6px;
+  margin-top: 6px;
+  color: #fff;
+}
+
+.app-column-btn {
+  padding: 6px;
+  border: 1px dashed #80808069;
+  font-size: 16px;
+  margin: 10px;
+  background-color: #a9a9a959;
+  width: 250px;
+  min-width: 240px;
+}
+
+.app-close {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 10px;
+  cursor: pointer;
+}
+
+.app-close:hover {
+  background-color: #80808029;
+  border-radius: 1px;
+}
+
+.app-labels-add {
+  margin-top: 6px;
+}
+
+.app-labels-add:hover {
+  background-color: #80808029;
+  border-radius: 1px;
+  cursor: pointer;
 }
